exports[`Search lists all articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "cursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QzIl0=",
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "cursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QyIl0=",
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "cursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`Search lists all articles 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
    },
  },
}
`;

exports[`Search lists all articles 3`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
    },
  },
}
`;

exports[`Search lists all articles 4`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
    },
  },
}
`;
